Fix running of unit tests during Maven build.